--- a/commons/src/main/res/drawable/plus.xml
+++ b/commons/src/main/res/drawable/plus.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2021. Shining-cat - Shiva Bernhard
   ~ This file is part of Everyday.
   ~
@@ -16,15 +15,18 @@
   ~     along with Everyday.  If not, see <https://www.gnu.org/licenses/>.
   -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:viewportHeight="24"
-    android:viewportWidth="24"
     android:width="24dp"
-    android:height="24dp">
-    <group android:name="plus_group" android:pivotX="12" android:pivotY="12">
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <group
+        android:name="plus_group"
+        android:pivotX="12"
+        android:pivotY="12">
         <path
             android:name="plus_path"
-            android:strokeColor="?attr/colorOnSecondary"
+            android:pathData="M12,0L12,24M0,12,L24,12"
             android:strokeWidth="3"
-            android:pathData="M12,0L12,24M0,12,L24,12" />
+            android:strokeColor="?attr/colorOnSecondary" />
     </group>
 </vector>
