--- a/commons/src/main/res/animator/fab_state_list_animator.xml
+++ b/commons/src/main/res/animator/fab_state_list_animator.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2021. Shining-cat - Shiva Bernhard
   ~ This file is part of Everyday.
   ~
@@ -17,17 +16,17 @@
   -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:state_pressed="true"
-        android:state_enabled="true">
+        android:state_enabled="true"
+        android:state_pressed="true">
         <set>
             <objectAnimator
-                android:propertyName="translationZ"
                 android:duration="100"
+                android:propertyName="translationZ"
                 android:valueTo="3dp"
                 android:valueType="floatType" />
             <objectAnimator
-                android:propertyName="elevation"
                 android:duration="0"
+                android:propertyName="elevation"
                 android:valueTo="5dp"
                 android:valueType="floatType" />
         </set>
@@ -36,14 +35,14 @@
     <item android:state_enabled="true">
         <set>
             <objectAnimator
-                android:propertyName="translationZ"
                 android:duration="100"
-                android:valueTo="0"
+                android:propertyName="translationZ"
                 android:startDelay="100"
+                android:valueTo="0"
                 android:valueType="floatType" />
             <objectAnimator
-                android:propertyName="elevation"
                 android:duration="0"
+                android:propertyName="elevation"
                 android:valueTo="5dp"
                 android:valueType="floatType" />
         </set>
@@ -51,13 +50,13 @@
     <item>
         <set>
             <objectAnimator
-                android:propertyName="translationZ"
                 android:duration="0"
+                android:propertyName="translationZ"
                 android:valueTo="0"
                 android:valueType="floatType" />
             <objectAnimator
-                android:propertyName="elevation"
                 android:duration="0"
+                android:propertyName="elevation"
                 android:valueTo="0"
                 android:valueType="floatType" />
         </set>
