--- a/commons/src/main/res/animator/plus_to_minus.xml
+++ b/commons/src/main/res/animator/plus_to_minus.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2021. Shining-cat - Shiva Bernhard
   ~ This file is part of Everyday.
   ~
@@ -16,8 +15,8 @@
   ~     along with Everyday.  If not, see <https://www.gnu.org/licenses/>.
   -->
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="@android:integer/config_mediumAnimTime"
     android:propertyName="pathData"
     android:valueFrom="M12,0L12,24M0,12,L24,12"
     android:valueTo="M12,0L12,24M12,12,L12,12"
-    android:valueType="pathType"
-    android:duration="@android:integer/config_mediumAnimTime" />
+    android:valueType="pathType" />
