--- a/screens/src/main/res/layout/fragment_home.xml
+++ b/screens/src/main/res/layout/fragment_home.xml
@@ -17,9 +17,9 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -35,10 +35,10 @@
         android:id="@+id/empty_list_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/generic_EMPTY_LIST"
         android:textAlignment="center"
         android:textColor="?attr/colorOnBackground"
         android:textSize="20sp"
-        android:text="@string/generic_EMPTY_LIST"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,19 +48,19 @@
         android:id="@+id/session_preset_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_timed_session_preset_view_holder"
         android:paddingStart="@dimen/half_margin"
         android:paddingEnd="@dimen/half_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:listitem="@layout/item_timed_session_preset_view_holder" />
 
     <fr.shining_cat.everyday.commons.ui.views.widgets.fabspeeddial.FabWithSpeedDial
         android:id="@+id/add_session_preset_fab_speed_dial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
