--- a/commons/src/main/res/values/styles.xml
+++ b/commons/src/main/res/values/styles.xml
@@ -49,6 +49,7 @@
         <item name="android:background">@drawable/fab_background</item>
         <item name="backgroundTint">?attr/colorAccent
         </item> <!-- material button background color is color primary, we want color accent for a fab -->
+        <item name="iconTint">?attr/colorOnSecondary</item>
         <item name="android:stateListAnimator">@animator/fab_state_list_animator</item>
         <item name="android:padding">@dimen/no_margin</item>
         <item name="iconPadding">@dimen/no_margin</item>
@@ -59,6 +60,7 @@
         <item name="android:background">@drawable/fab_background</item>
         <item name="backgroundTint">?attr/colorAccent
         </item> <!-- material button background color is color primary, we want color accent for a fab -->
+        <item name="iconTint">?attr/colorOnSecondary</item>
         <item name="android:stateListAnimator">@animator/fab_state_list_animator</item>
         <item name="iconSize">@dimen/mini_fab_icon_size</item>
         <item name="android:padding">@dimen/no_margin</item>
